2013-05-06  Darin Adler  <darin@apple.com>

        Use adoptCF and adoptNS in more places, test code and code not compiled on Mac
        https://bugs.webkit.org/show_bug.cgi?id=115657

        Reviewed by Sam Weinig.

        This is similar to my last set of changes, but covers code that I missed with
        global replace using the Safari Xcode workspace.

        * DumpRenderTree/cf/WebArchiveDumpSupport.cpp:
        (convertWebResourceDataToString):
        (convertWebResourceResponseToDictionary):
        (createXMLStringFromWebArchiveData):
        * DumpRenderTree/cg/ImageDiffCG.cpp:
        (createImageFromStdin):
        (createDifferenceImage):
        (main):
        * DumpRenderTree/cg/PixelDumpSupportCG.cpp:
        (printPNG):
        (dumpBitmap):
        * DumpRenderTree/cg/PixelDumpSupportCG.h:
        (BitmapContext::BitmapContext):
        * DumpRenderTree/mac/MockWebNotificationProvider.mm:
        (-[MockWebNotificationProvider init]):
        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (createBitmapContext):
        * DumpRenderTree/mac/TestRunnerMac.mm:
        (TestRunner::addDisallowedURL):
        (TestRunner::applicationCacheDiskUsageForOrigin):
        (TestRunner::localStorageDiskUsageForOrigin):
        (TestRunner::clearApplicationCacheForOrigin):
        (TestRunner::deleteLocalStorageForOrigin):
        (TestRunner::copyDecodedHostName):
        (TestRunner::copyEncodedHostName):
        (TestRunner::queueLoad):
        (TestRunner::setDomainRelaxationForbiddenForURLScheme):
        (TestRunner::setMockGeolocationPositionUnavailableError):
        (TestRunner::setUserStyleSheetLocation):
        (TestRunner::setValueForUser):
        (TestRunner::overridePreference):
        (TestRunner::setPersistentUserStyleSheetLocation):
        (TestRunner::execCommand):
        (TestRunner::findString):
        (TestRunner::isCommandEnabled):
        (TestRunner::addOriginAccessWhitelistEntry):